docs: Add a note - html css lecture 4-3
Online HTML CSS Leture 4-3 note

--- a/notes/4-1~4-3.md
+++ b/notes/4-1~4-3.md
@@ -16,3 +16,15 @@
 + 수평으로 쌓인다.
 + < span >A</ span ><br>< span >B</ span ><br>< span >C</ span >< span >D</ span ><br>< span >E</ span > <br> 의 경우 <br> A B CDE와 같이 <br> < span > 요소를 enter 해도 그냥 띄어쓰기가 된다.
 + **text를 작업하는 용도**
+
+## 3. display 속성
++ 블록 요소인 < div >, < h1 >, < p > 등에는 **display: block**이 **기본값**으로 지정되어 있다.
++ 인라인 요소인 < span >, < img > 등에는 **display: inline**이 **기본값**으로 지정되어 있다.
+각 요소별 display 요소를 아는 것이 중요하다.
+
+## 4. display 속성 변환
++ 인라인 요소를 강제로 블록요소로 바꿀 땐, 해당 인라인 요소에
+display: block을 해주면 된다.
+
++ 반대로, 블록 요소를 강제로 인라인 요소로 바꾸는 것은 
+display:inline 이다.
