docs: Add notes
add notes

--- a/notes/4-1~4-3.md
+++ b/notes/4-1~4-3.md
@@ -15,6 +15,7 @@
 + width: 0 <br> height: 0; <br> 으로 시작
 + 수평으로 쌓인다.
 + < span >A</ span ><br>< span >B</ span ><br>< span >C</ span >< span >D</ span ><br>< span >E</ span > <br> 의 경우 <br> A B CDE와 같이 <br> < span > 요소를 enter 해도 그냥 띄어쓰기가 된다.
++ margin, padding 위 아래는 사용할 수 없다.
 + **text를 작업하는 용도**
 
 ## 3. display 속성
